# CRISPR-Holochain-redux

./: .gitignore  LICENSE  Procfile  README.md  config.nix  credits.md  package.json  procfile  project.json
chimera/: .eslintrc.js  .gitignore  README.md  package.json  vue.config.js
chimera/public/: index.html
chimera/src/: App.vue  ConsciousBubble.vue  background.js  main.js  router.js
dna/: app.json
dna/bubbles/: config.nix
dna/bubbles_/: package.json
dna/crispr/: config.nix  package.json
dna/curated fields/: config.nix
dna/demo/: 1-conductor-config.toml  2-conductor-config.toml  3-conductor-config.toml  agentPhil.keystore  (+20 more)
profile_sites/: package.json
templates/dna_templates/Origins/DNA/zomes/origins/code/: .hcbuild  Cargo.toml
templates/dna_templates/Origins/DNA/zomes/origins/code/src/: lib.rs  lib_declarations.rs  lib_zome.rs
templates/dna_templates/Origins/DNA/zomes/origins/code/src/origin/: create.rs  delete.rs  entry_permissions.rs  entry_permissions_create.rs  entry_permissions_delete.rs  entry_permissions_update.rs  handlers.rs  lib_create.rs  lib_delete.rs  lib_entry_def.rs  lib_list.rs  lib_list_anchors.rs  lib_read.rs  lib_rebase.rs  lib_update.rs  list.rs  mod.rs  read.rs  rebase.rs  update.rs
templates/dna_templates/entryId_link_to_latest/zomes/notes/code/: Cargo.toml
templates/dna_templates/entryId_link_to_latest/zomes/notes/code/src/: lib.rs
templates/dna_templates/entryId_link_to_latest/zomes/notes/code/src/note/: handlers.rs  mod.rs
ui/: .eslintrc.js  README.md  helloworld.txt  package.json  profile-site  vue.config.js
(+811 files in other folders)
