[package]
name = "notes"
version = "0.1.0"
authors = ["hc-scaffold-framework"]
edition = "2018"

[dependencies]
serde = "=1.0.104"
serde_json = { version = "=1.0.47", features = ["preserve_order"] }
serde_derive = "=1.0.104"
hdk = "=0.0.46-alpha1"
hdk_proc_macros = "=0.0.46-alpha1"
holochain_wasm_utils = "=0.0.46-alpha1"
holochain_json_derive = "=0.0.23"
holochain_anchors = { git = "https://github.com/holochain/holochain-anchors" , branch = "master" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
